# squirrel

./: .travis.sh  .travis.yml  CMakeLists.txt  README.md
sq/: CMakeLists.txt
sqstdlib/: CMakeLists.txt
squirrel/: CMakeLists.txt
